--- a/index.html
+++ b/index.html
@@ -1109,7 +1109,7 @@
 
 
 
-	<h1> <span [text]="+selectedUnidadSlide + selectedDecenaSlide * 10 + selectedCentenaSlide * 100 ">USD |
+	<h1> <span [text]="+selectedUnidadSlide + selectedDecenaSlide * 10 + selectedCentenaSlide * 100 ">MLC |
              </span>
 	<span [text]="(+selectedUnidadSlide + selectedDecenaSlide * 10 + selectedCentenaSlide * 100) * divisa.mlc ">
              </span><span>CUP</h1>
@@ -1121,17 +1121,17 @@
         <div class="ampstart-headerbar flex fixed justify-start items-center top-0">
 	  <div flex="1 1 auto">
 	    <amp-base-carousel width="110"  on="slideChange:AMP.setState({ divisa: {mlc: '{{mlc}}'}, selectedCentenaSlide: event.index})"  height="90" layout="fixed" horizontal=false >
-               <amp-img src="./img/un_dolar.png" width="120" height="90" alt="100 dólares"></amp-img>
-               <amp-img src="./img/un_dolar.png" width="120" height="90" alt="200 dólares"></amp-img>
-               <amp-img src="./img/un_dolar.png" width="120" height="90" alt="300 dólares"></amp-img>
-               <amp-img src="./img/un_dolar.png" width="120" height="90" alt="400 dólares"></amp-img>
-               <amp-img src="./img/un_dolar.png" width="120" height="90" alt="500 dólares"></amp-img>
-               <amp-img src="./img/un_dolar.png" width="120" height="90" alt="600 dólares"></amp-img>
-               <amp-img src="./img/un_dolar.png" width="120" height="90" alt="700 dólares"></amp-img>
-               <amp-img src="./img/un_dolar.png" width="120" height="90" alt="800 dólares"></amp-img>
-               <amp-img src="./img/un_dolar.png" width="120" height="90" alt="900 dólares"></amp-img>
-               <amp-img src="./img/un_dolar.png" width="120" height="90" alt="1000 dólares"></amp-img>
-               <amp-img src="./img/un_dolar.png" width="120" height="90" alt="11000 dólares"></amp-img>
+               <amp-img src="./img/un_dolar.png" width="120" height="90" alt="100 mlc"></amp-img>
+               <amp-img src="./img/un_dolar.png" width="120" height="90" alt="200 mlc"></amp-img>
+               <amp-img src="./img/un_dolar.png" width="120" height="90" alt="300 mlc"></amp-img>
+               <amp-img src="./img/un_dolar.png" width="120" height="90" alt="400 mlc"></amp-img>
+               <amp-img src="./img/un_dolar.png" width="120" height="90" alt="500 mlc"></amp-img>
+               <amp-img src="./img/un_dolar.png" width="120" height="90" alt="600 mlc"></amp-img>
+               <amp-img src="./img/un_dolar.png" width="120" height="90" alt="700 mlc"></amp-img>
+               <amp-img src="./img/un_dolar.png" width="120" height="90" alt="800 mlc"></amp-img>
+               <amp-img src="./img/un_dolar.png" width="120" height="90" alt="900 mlc"></amp-img>
+               <amp-img src="./img/un_dolar.png" width="120" height="90" alt="1000 mlc"></amp-img>
+               <amp-img src="./img/un_dolar.png" width="120" height="90" alt="11000 mlc"></amp-img>
                <amp-img src="./img/un_dolar.png" width="120" height="90" alt=""></amp-img>
                <amp-img src="./img/un_dolar.png" width="120" height="90" alt=""></amp-img>
                <amp-img src="./img/un_dolar.png" width="120" height="90" alt=""></amp-img>
@@ -1163,16 +1163,16 @@
 
           <div flex="1 1 auto">
 	    <amp-base-carousel width="110" height="90" layout="fixed" horizontal=false  on="slideChange:AMP.setState({ divisa: {dolar: '{{dolar}}'}, selectedUnidadSlide: event.index })" >
-               <amp-img src="./img/un_dolar.png" width="400" height="300" alt="Ningún dólar"></amp-img>
-               <amp-img src="./img/un_dolar.png" width="400" height="300" alt="Un dólar"></amp-img>
-               <amp-img src="./img/un_dolar.png" width="400" height="300" alt="Dos dólares"></amp-img>
-               <amp-img src="./img/un_dolar.png" width="400" height="300" alt="Tres dólares"></amp-img>
-               <amp-img src="./img/un_dolar.png" width="400" height="300" alt="Cuatro dólares"></amp-img>
-               <amp-img src="./img/un_dolar.png" width="400" height="300" alt="Cinco dólares"></amp-img>
-               <amp-img src="./img/un_dolar.png" width="400" height="300" alt="Séis dólares"></amp-img>
-               <amp-img src="./img/un_dolar.png" width="400" height="300" alt="Siete dólares"></amp-img>
-               <amp-img src="./img/un_dolar.png" width="400" height="300" alt="Ocho dólares"></amp-img>
-               <amp-img src="./img/un_dolar.png" width="400" height="300" alt="Nueve dólares"></amp-img>
+               <amp-img src="./img/un_dolar.png" width="400" height="300" alt="Ningún mlc"></amp-img>
+               <amp-img src="./img/un_dolar.png" width="400" height="300" alt="Un mlc"></amp-img>
+               <amp-img src="./img/un_dolar.png" width="400" height="300" alt="Dos mlc"></amp-img>
+               <amp-img src="./img/un_dolar.png" width="400" height="300" alt="Tres mlc"></amp-img>
+               <amp-img src="./img/un_dolar.png" width="400" height="300" alt="Cuatro mlc"></amp-img>
+               <amp-img src="./img/un_dolar.png" width="400" height="300" alt="Cinco mlc"></amp-img>
+               <amp-img src="./img/un_dolar.png" width="400" height="300" alt="Séis mlc"></amp-img>
+               <amp-img src="./img/un_dolar.png" width="400" height="300" alt="Siete mlc"></amp-img>
+               <amp-img src="./img/un_dolar.png" width="400" height="300" alt="Ocho mlc"></amp-img>
+               <amp-img src="./img/un_dolar.png" width="400" height="300" alt="Nueve mlc"></amp-img>
 
              </amp-base-carousel>
           </div>
