--- a/index.html
+++ b/index.html
@@ -1097,7 +1097,7 @@
         <!-- fin header -->
         <h2 class="m1">Santa.Capital</h2>
         <h3 class="m1">Ventas sin Complejos!</h3>
-        <h4 class="m1">Valor de un dólar según https://wwww.eltoque.com, en las últimas 24 horas. Refresque si no aparece un valor o si quiere actualizarlo!</h3>
+        <h4 class="m1">Valor de un mlc según https://wwww.eltoque.com, en las últimas 24 horas. Refresque si no aparece un valor o si quiere actualizarlo!</h3>
 
 
 
