una moneda para mlc

--- a/index.html
+++ b/index.html
@@ -1121,58 +1121,58 @@
         <div class="ampstart-headerbar flex fixed justify-start items-center top-0">
 	  <div flex="1 1 auto">
 	    <amp-base-carousel width="110"  on="slideChange:AMP.setState({ divisa: {mlc: '{{mlc}}'}, selectedCentenaSlide: event.index})"  height="90" layout="fixed" horizontal=false >
-               <amp-img src="./img/un_dolar.png" width="120" height="90" alt="100 mlc"></amp-img>
-               <amp-img src="./img/un_dolar.png" width="120" height="90" alt="200 mlc"></amp-img>
-               <amp-img src="./img/un_dolar.png" width="120" height="90" alt="300 mlc"></amp-img>
-               <amp-img src="./img/un_dolar.png" width="120" height="90" alt="400 mlc"></amp-img>
-               <amp-img src="./img/un_dolar.png" width="120" height="90" alt="500 mlc"></amp-img>
-               <amp-img src="./img/un_dolar.png" width="120" height="90" alt="600 mlc"></amp-img>
-               <amp-img src="./img/un_dolar.png" width="120" height="90" alt="700 mlc"></amp-img>
-               <amp-img src="./img/un_dolar.png" width="120" height="90" alt="800 mlc"></amp-img>
-               <amp-img src="./img/un_dolar.png" width="120" height="90" alt="900 mlc"></amp-img>
-               <amp-img src="./img/un_dolar.png" width="120" height="90" alt="1000 mlc"></amp-img>
-               <amp-img src="./img/un_dolar.png" width="120" height="90" alt="11000 mlc"></amp-img>
-               <amp-img src="./img/un_dolar.png" width="120" height="90" alt=""></amp-img>
-               <amp-img src="./img/un_dolar.png" width="120" height="90" alt=""></amp-img>
-               <amp-img src="./img/un_dolar.png" width="120" height="90" alt=""></amp-img>
-               <amp-img src="./img/un_dolar.png" width="120" height="90" alt=""></amp-img>
-               <amp-img src="./img/un_dolar.png" width="120" height="90" alt=""></amp-img>
-               <amp-img src="./img/un_dolar.png" width="120" height="90" alt=""></amp-img>
-               <amp-img src="./img/un_dolar.png" width="120" height="90" alt=""></amp-img>
-               <amp-img src="./img/un_dolar.png" width="120" height="90" alt=""></amp-img>
-               <amp-img src="./img/un_dolar.png" width="120" height="90" alt=""></amp-img>
+               <amp-img src="./img/fidget.png" width="120" height="90" alt="100 mlc"></amp-img>
+               <amp-img src="./img/fidget.png" width="120" height="90" alt="200 mlc"></amp-img>
+               <amp-img src="./img/fidget.png" width="120" height="90" alt="300 mlc"></amp-img>
+               <amp-img src="./img/fidget.png" width="120" height="90" alt="400 mlc"></amp-img>
+               <amp-img src="./img/fidget.png" width="120" height="90" alt="500 mlc"></amp-img>
+               <amp-img src="./img/fidget.png" width="120" height="90" alt="600 mlc"></amp-img>
+               <amp-img src="./img/fidget.png" width="120" height="90" alt="700 mlc"></amp-img>
+               <amp-img src="./img/fidget.png" width="120" height="90" alt="800 mlc"></amp-img>
+               <amp-img src="./img/fidget.png" width="120" height="90" alt="900 mlc"></amp-img>
+               <amp-img src="./img/fidget.png" width="120" height="90" alt="1000 mlc"></amp-img>
+               <amp-img src="./img/fidget.png" width="120" height="90" alt="11000 mlc"></amp-img>
+               <amp-img src="./img/fidget.png" width="120" height="90" alt=""></amp-img>
+               <amp-img src="./img/fidget.png" width="120" height="90" alt=""></amp-img>
+               <amp-img src="./img/fidget.png" width="120" height="90" alt=""></amp-img>
+               <amp-img src="./img/fidget.png" width="120" height="90" alt=""></amp-img>
+               <amp-img src="./img/fidget.png" width="120" height="90" alt=""></amp-img>
+               <amp-img src="./img/fidget.png" width="120" height="90" alt=""></amp-img>
+               <amp-img src="./img/fidget.png" width="120" height="90" alt=""></amp-img>
+               <amp-img src="./img/fidget.png" width="120" height="90" alt=""></amp-img>
+               <amp-img src="./img/fidget.png" width="120" height="90" alt=""></amp-img>
 
              </amp-base-carousel>
 	  </div>
 
           <div flex="1 1 auto">
             <amp-base-carousel width="110"  on="slideChange:AMP.setState({ divisa: {dolar: '{{dolar}}'}, selectedDecenaSlide: event.index})"  height="90" layout="fixed" horizontal=false >
-               <amp-img src="./img/un_dolar.png" width="120" height="90" alt=""></amp-img>
-               <amp-img src="./img/un_dolar.png" width="120" height="90" alt=""></amp-img>
-               <amp-img src="./img/un_dolar.png" width="120" height="90" alt=""></amp-img>
-               <amp-img src="./img/un_dolar.png" width="120" height="90" alt=""></amp-img>
-               <amp-img src="./img/un_dolar.png" width="120" height="90" alt=""></amp-img>
-               <amp-img src="./img/un_dolar.png" width="120" height="90" alt=""></amp-img>
-               <amp-img src="./img/un_dolar.png" width="120" height="90" alt=""></amp-img>
-               <amp-img src="./img/un_dolar.png" width="120" height="90" alt=""></amp-img>
-               <amp-img src="./img/un_dolar.png" width="120" height="90" alt=""></amp-img>
-               <amp-img src="./img/un_dolar.png" width="120" height="90" alt=""></amp-img>
+               <amp-img src="./img/fidget.png" width="120" height="90" alt=""></amp-img>
+               <amp-img src="./img/fidget.png" width="120" height="90" alt=""></amp-img>
+               <amp-img src="./img/fidget.png" width="120" height="90" alt=""></amp-img>
+               <amp-img src="./img/fidget.png" width="120" height="90" alt=""></amp-img>
+               <amp-img src="./img/fidget.png" width="120" height="90" alt=""></amp-img>
+               <amp-img src="./img/fidget.png" width="120" height="90" alt=""></amp-img>
+               <amp-img src="./img/fidget.png" width="120" height="90" alt=""></amp-img>
+               <amp-img src="./img/fidget.png" width="120" height="90" alt=""></amp-img>
+               <amp-img src="./img/fidget.png" width="120" height="90" alt=""></amp-img>
+               <amp-img src="./img/fidget.png" width="120" height="90" alt=""></amp-img>
 
              </amp-base-carousel>
           </div>
 
           <div flex="1 1 auto">
 	    <amp-base-carousel width="110" height="90" layout="fixed" horizontal=false  on="slideChange:AMP.setState({ divisa: {dolar: '{{dolar}}'}, selectedUnidadSlide: event.index })" >
-               <amp-img src="./img/un_dolar.png" width="400" height="300" alt="Ningún mlc"></amp-img>
-               <amp-img src="./img/un_dolar.png" width="400" height="300" alt="Un mlc"></amp-img>
-               <amp-img src="./img/un_dolar.png" width="400" height="300" alt="Dos mlc"></amp-img>
-               <amp-img src="./img/un_dolar.png" width="400" height="300" alt="Tres mlc"></amp-img>
-               <amp-img src="./img/un_dolar.png" width="400" height="300" alt="Cuatro mlc"></amp-img>
-               <amp-img src="./img/un_dolar.png" width="400" height="300" alt="Cinco mlc"></amp-img>
-               <amp-img src="./img/un_dolar.png" width="400" height="300" alt="Séis mlc"></amp-img>
-               <amp-img src="./img/un_dolar.png" width="400" height="300" alt="Siete mlc"></amp-img>
-               <amp-img src="./img/un_dolar.png" width="400" height="300" alt="Ocho mlc"></amp-img>
-               <amp-img src="./img/un_dolar.png" width="400" height="300" alt="Nueve mlc"></amp-img>
+               <amp-img src="./img/fidget.png" width="400" height="300" alt="Ningún mlc"></amp-img>
+               <amp-img src="./img/fidget.png" width="400" height="300" alt="Un mlc"></amp-img>
+               <amp-img src="./img/fidget.png" width="400" height="300" alt="Dos mlc"></amp-img>
+               <amp-img src="./img/fidget.png" width="400" height="300" alt="Tres mlc"></amp-img>
+               <amp-img src="./img/fidget.png" width="400" height="300" alt="Cuatro mlc"></amp-img>
+               <amp-img src="./img/fidget.png" width="400" height="300" alt="Cinco mlc"></amp-img>
+               <amp-img src="./img/fidget.png" width="400" height="300" alt="Séis mlc"></amp-img>
+               <amp-img src="./img/fidget.png" width="400" height="300" alt="Siete mlc"></amp-img>
+               <amp-img src="./img/fidget.png" width="400" height="300" alt="Ocho mlc"></amp-img>
+               <amp-img src="./img/fidget.png" width="400" height="300" alt="Nueve mlc"></amp-img>
 
              </amp-base-carousel>
           </div>
