Agregando una olla

--- a/index.html
+++ b/index.html
@@ -1107,7 +1107,7 @@
         <!-- fin header -->
         <h2 class="m1">Santa.Capital</h2>
         <h3 class="m1">Ventas sin Complejos!</h3>
-        <h4 class="m1">Valor de un mlc según https://wwww.eltoque.com, en las últimas 24 horas. Refresque si no aparece un valor o si quiere actualizarlo!</h3>
+        <h4 class="m1">Valor de un mlc en las últimas 24 horas. Refresque si no aparece un valor o si quiere actualizarlo!</h3>
 
 
 
@@ -1196,7 +1196,6 @@
                   layout="responsive"
                   type="slides"
                   slide=0
-		  hidden
                   [slide]="product.selectedSlideForCielo"
                   on="slideChange: AMP.setState({product: {selectedSlide: event.index, selectedSlideForCielo: event.index}})"
                   class="fadeIn"
@@ -1226,8 +1225,8 @@
                    </a>
 
                     <amp-img
-                      src="/img/cielo/proveedor_4_grupo_cielo_slide_0.jpg"
-                      [src]="cuba.imageUrl_5"
+                      src="/img/cuba/p1_sl0_olla_arrocera_hamilton.jpg"
+                      [src]="cuba.imageUrl_0"
                       width="500"
                       height="500"
                       layout="responsive"
