--- a/index.html
+++ b/index.html
@@ -1104,9 +1104,10 @@
           </a>
         </div>
 
-        <!-- fin header -->
+        <!-- fin header 
         <h2 class="m1">Santa.Capital</h2>
         <h3 class="m1">Ventas sin Complejos!</h3>
+	-->
         <h4 class="m1">Valor de un MLC. Refresque si no aparece un valor o si quiere actualizarlo!</h3>
 
 
