Agregando un menú

--- a/index.html
+++ b/index.html
@@ -892,6 +892,31 @@
 
   <body>
 
+    <!--
+    <amp-state
+       id = "remoto"
+       src="https://www.alectrico.cl/api/v1/electrico/circuitos/cart.json?amp_cliente_id=CLIENT_ID(uid)&_=RANDOM">
+     </amp-state>
+    -->
+    <amp-sidebar id="drawermenu" layout="nodisplay">
+      <a href="https://mlc.santa.store/local"class="caps text-decoration-none block p1">Experiment</a>
+     <!--
+      <a href="https://servicios.alectrico.cl" class="caps text-decoration-none block p1">Servicios</a>
+      <a href="https://shop.alectrico.cl" class="caps text-decoration-none block p1">Shop</a>
+
+      <hr>
+      <a class="caps text-decoration-none block p1" 
+        href="https://alectrico.cl/santiago">Santiago</a> 
+
+      <a class="caps text-decoration-none block p1" 
+        href="https://alectrico.cl/providencia">Providencia</a> 
+      <a class="caps text-decoration-none block p1"
+        href="https://alectrico.cl/ñuñoa">Ñuñoa</a>
+      <a class="caps text-decoration-none block p1"
+        href="https://repair.alectrico.cl">Repair</a>
+      -->
+    </amp-sidebar>
+
           <!--
     <amp-state id="divisa"
        src="https://www.alectrico.cl/api/v1/electrico/circuitos/divisas.json?amp_cliente_id=CLIENT_ID(uid)&_=RANDOM"   >
