--- a/experiment.html
+++ b/experiment.html
@@ -50,6 +50,284 @@
   <button id="username-submit">Submit</button>
 </amp-script>
 
+
+
+  </head>
+
+  <body>
+
+    <!--
+    <amp-state
+       id = "remoto"
+       src="https://www.alectrico.cl/api/v1/electrico/circuitos/cart.json?amp_cliente_id=CLIENT_ID(uid)&_=RANDOM">
+     </amp-state>
+    -->
+    <amp-sidebar id="drawermenu" layout="nodisplay">
+      <a href="https://mlc.santa.capital/experiment.html"class="caps text-decoration-none block p1">Experiment</a>
+     <!--
+      <a href="https://servicios.alectrico.cl" class="caps text-decoration-none block p1">Servicios</a>
+      <a href="https://shop.alectrico.cl" class="caps text-decoration-none block p1">Shop</a>
+
+      <hr>
+      <a class="caps text-decoration-none block p1"
+        href="https://alectrico.cl/santiago">Santiago</a>
+
+      <a class="caps text-decoration-none block p1"
+        href="https://alectrico.cl/providencia">Providencia</a>
+      <a class="caps text-decoration-none block p1"
+        href="https://alectrico.cl/ñuñoa">Ñuñoa</a>
+      <a class="caps text-decoration-none block p1"
+        href="https://repair.alectrico.cl">Repair</a>
+      -->
+    </amp-sidebar>
+
+          <!--
+    <amp-state id="divisa"
+       src="https://www.alectrico.cl/api/v1/electrico/circuitos/divisas.json?amp_cliente_id=CLIENT_ID(uid)&_=RANDOM"   >
+    </amp-state>
+          -->
+   <amp-state id="divisa">
+     <script type="application/json">
+        {
+         "mlc": "0",
+         "dolar": "0"
+        }
+      </script>
+    </amp-state>
+
+   <div id="abe-preview-header" 
+      class="ampstart-headerbar fixed flex justify-start items-center top-0 left-0 right-0 pl2 pr4">
+
+      <!--
+      <h1 id="abe-preview-header-title" 
+        class="h3 center truncate caps">
+        SANTA.CAPITAL
+      </h1>
+       ver valor del dólar 
+        <h1 id="abe-preview-header-title"
+        class="h3 center truncate caps"
+        [text] = divisa.cup>
+        SANTA.CAPITAL
+      </h1>
+      -->
+      <section amp-access="NOT loggedIn">
+        <template amp-access-template type="amp-mustache">
+                <h1 id="divisa_text" class="h3 center truncate caps"><span> {{mlc}} CUP </span> </h1>
+          <small>eltoque.com</small>
+        </template>
+       </section>
+      <section amp-access="loggedIn">
+        <template amp-access-template type="amp-mustache">
+        <!---
+        {{presupuesto_local}}-local {{dueno_local}} | remoto-{{presupuesto_remoto}}
+          {{dueno_remoto}} | current_user {{current_user}}
+          -->
+          {{current_user}}
+        </template>
+      </section>
+    </div>
+    <!-- fin abe-preview header -->
+
+    <!-- comienzo abr-preview -->
+    <div id="abe-preview">
+      <div class="ampstart-card m1">
+        <div class="header">
+          <a id="sample-menu" on="tap:drawermenu.toggle">
+            <amp-img srcset="/img/ic_menu_white_1x_web_24dp.png 1x, /img/ic_menu_white_2x_web_24dp.png 2x" 
+              width="24" 
+              height="24" 
+             alt="navigation">
+            </amp-img>
+          </a>
+        </div>
+   <div id="abe-preview-header" 
+      class="ampstart-headerbar fixed flex justify-start items-center top-0 left-0 right-0 pl2 pr4">
+
+      <!--
+      <h1 id="abe-preview-header-title" 
+        class="h3 center truncate caps">
+        SANTA.CAPITAL
+      </h1>
+       ver valor del dólar 
+        <h1 id="abe-preview-header-title"
+        class="h3 center truncate caps"
+        [text] = divisa.cup>
+        SANTA.CAPITAL
+      </h1>
+      -->
+      <section amp-access="NOT loggedIn">
+        <template amp-access-template type="amp-mustache">
+                <h1 id="divisa_text" class="h3 center truncate caps"><span> {{mlc}} CUP </span> </h1>
+          <small>eltoque.com</small>
+        </template>
+       </section>
+      <section amp-access="loggedIn">
+        <template amp-access-template type="amp-mustache">
+        <!---
+        {{presupuesto_local}}-local {{dueno_local}} | remoto-{{presupuesto_remoto}}
+          {{dueno_remoto}} | current_user {{current_user}}
+          -->
+          {{current_user}}
+        </template>
+      </section>
+    </div>
+    <!-- fin abe-preview header -->
+
+    <!-- comienzo abr-preview -->
+    <div id="abe-preview">
+      <div class="ampstart-card m1">
+        <div class="header">
+          <a id="sample-menu" on="tap:drawermenu.toggle">
+            <amp-img srcset="/img/ic_menu_white_1x_web_24dp.png 1x, /img/ic_menu_white_2x_web_24dp.png 2x" 
+              width="24" 
+              height="24" 
+             alt="navigation">
+            </amp-img>
+          </a>
+        </div>
+        <!-- fin header 
+        <h2 class="m1">Santa.Capital</h2>
+        <h3 class="m1">Ventas sin Complejos!</h3>
+        -->
+        <h4 class="m1">Valor de un MLC. Refresque si no aparece un valor o si quiere actualizarlo!</h3>
+
+
+
+        <div class="m1">
+          <amp-social-share type="facebook" width="30" height="22" data-param-app_id="860581905818440"></amp-social-share>
+          <amp-social-share type="email" width="30" height="22"></amp-social-share>
+          <amp-social-share type="pinterest" width="33" height="22"></amp-social-share>
+        </div>
+
+
+
+        <h1> <span [text]="+selectedUnidadSlide + selectedDecenaSlide * 10 + selectedCentenaSlide * 100 ">MLC |
+             </span>
+        <span [text]="(+selectedUnidadSlide + selectedDecenaSlide * 10 + selectedCentenaSlide * 100) * divisa.mlc ">
+             </span><span>CUP</h1>
+
+        <p [text]=divisa.mlc></p>
+
+    <section amp-access="NOT loggedIn">
+      <template amp-access-template type="amp-mustache">
+        <div class="ampstart-headerbar flex fixed justify-start items-center top-1">
+          <div flex="1 1 auto">
+            <amp-base-carousel width="110"  on="slideChange:AMP.setState({ divisa: {mlc: '{{mlc}}'}, selectedCentenaSlide: event.index})"  height="90" layout="fixed" horizontal=false >
+               <amp-img src="./img/fidget.png" width="120" height="90" alt="100 mlc"></amp-img>
+               <amp-img src="./img/fidget.png" width="120" height="90" alt="200 mlc"></amp-img>
+               <amp-img src="./img/fidget.png" width="120" height="90" alt="300 mlc"></amp-img>
+               <amp-img src="./img/fidget.png" width="120" height="90" alt="400 mlc"></amp-img>
+               <amp-img src="./img/fidget.png" width="120" height="90" alt="500 mlc"></amp-img>
+               <amp-img src="./img/fidget.png" width="120" height="90" alt="600 mlc"></amp-img>
+               <amp-img src="./img/fidget.png" width="120" height="90" alt="700 mlc"></amp-img>
+               <amp-img src="./img/fidget.png" width="120" height="90" alt="800 mlc"></amp-img>
+               <amp-img src="./img/fidget.png" width="120" height="90" alt="900 mlc"></amp-img>
+               <amp-img src="./img/fidget.png" width="120" height="90" alt="1000 mlc"></amp-img>
+               <amp-img src="./img/fidget.png" width="120" height="90" alt="11000 mlc"></amp-img>
+               <amp-img src="./img/fidget.png" width="120" height="90" alt=""></amp-img>
+               <amp-img src="./img/fidget.png" width="120" height="90" alt=""></amp-img>
+               <amp-img src="./img/fidget.png" width="120" height="90" alt=""></amp-img>
+               <amp-img src="./img/fidget.png" width="120" height="90" alt=""></amp-img>
+               <amp-img src="./img/fidget.png" width="120" height="90" alt=""></amp-img>
+               <amp-img src="./img/fidget.png" width="120" height="90" alt=""></amp-img>
+               <amp-img src="./img/fidget.png" width="120" height="90" alt=""></amp-img>
+               <amp-img src="./img/fidget.png" width="120" height="90" alt=""></amp-img>
+            <amp-img src="./img/fidget.png" width="120" height="90" alt=""></amp-img>
+
+             </amp-base-carousel>
+          </div>
+
+          <div flex="1 1 auto">
+            <amp-base-carousel width="110"  on="slideChange:AMP.setState({ divisa: {dolar: '{{dolar}}'}, selectedDecenaSlide: event.index})"  height="90" layout="fixed" horizontal=false >
+               <amp-img src="./img/fidget.png" width="120" height="90" alt=""></amp-img>
+               <amp-img src="./img/fidget.png" width="120" height="90" alt=""></amp-img>
+               <amp-img src="./img/fidget.png" width="120" height="90" alt=""></amp-img>
+               <amp-img src="./img/fidget.png" width="120" height="90" alt=""></amp-img>
+               <amp-img src="./img/fidget.png" width="120" height="90" alt=""></amp-img>
+               <amp-img src="./img/fidget.png" width="120" height="90" alt=""></amp-img>
+               <amp-img src="./img/fidget.png" width="120" height="90" alt=""></amp-img>
+               <amp-img src="./img/fidget.png" width="120" height="90" alt=""></amp-img>
+               <amp-img src="./img/fidget.png" width="120" height="90" alt=""></amp-img>
+               <amp-img src="./img/fidget.png" width="120" height="90" alt=""></amp-img>
+
+             </amp-base-carousel>
+          </div>
+
+          <div flex="1 1 auto">
+            <amp-base-carousel width="110" height="90" layout="fixed" horizontal=false  on="slideChange:AMP.setState({ divisa: {dolar: '{{dolar}}'}, selectedUnidadSlide: event.index })" >
+               <amp-img src="./img/fidget.png" width="400" height="300" alt="Ningún mlc"></amp-img>
+               <amp-img src="./img/fidget.png" width="400" height="300" alt="Un mlc"></amp-img>
+               <amp-img src="./img/fidget.png" width="400" height="300" alt="Dos mlc"></amp-img>
+               <amp-img src="./img/fidget.png" width="400" height="300" alt="Tres mlc"></amp-img>
+               <amp-img src="./img/fidget.png" width="400" height="300" alt="Cuatro mlc"></amp-img>
+               <amp-img src="./img/fidget.png" width="400" height="300" alt="Cinco mlc"></amp-img>
+               <amp-img src="./img/fidget.png" width="400" height="300" alt="Séis mlc"></amp-img>
+               <amp-img src="./img/fidget.png" width="400" height="300" alt="Siete mlc"></amp-img>
+               <amp-img src="./img/fidget.png" width="400" height="300" alt="Ocho mlc"></amp-img>
+               <amp-img src="./img/fidget.png" width="400" height="300" alt="Nueve mlc"></amp-img>
+
+             </amp-base-carousel>
+          </div>
+        </div>
+      </template>
+     </section>
+       <amp-carousel id="cielo-carousel"
+                  width="500"
+                  height="500"
+                  layout="responsive"
+                  type="slides"
+                  slide=0
+                  [slide]="product.selectedSlideForCielo"
+                  on="slideChange: AMP.setState({product: {selectedSlide: event.index, selectedSlideForCielo: event.index}})"
+                  class="fadeIn"
+                  [hidden]="product.selectedColor != 'cielo'">
+
+
+                  <div 
+                    role="button"
+                    tabindex="0">
+
+                    <a class="ampstart-btn caps m2 close-gallery-button"
+                     [href]= "'https://api.whatsapp.com/send?phone=' + proveedor.p4.fono + '&text=Hola podemos hablar sobre ' 
+                             + cuba.nombre_5"
+                      href = "tel:+5358461012">
+                      WhatsApp
+                    </a>
+
+                    <p class="ampstart-btn caps m2 comision-gallery-button"
+                       [text] = "cuba.precio_5">
+                      Llamar
+                    </p>
+
+                    <a class="comision-gallery-button">
+                     <span>
+                       Mensajería Incluída en la Ciudad
+                    </span>
+                   </a>
+
+                    <amp-img
+                      src="/img/cuba/p1_sl0_olla_arrocera_hamilton.jpg"
+                      [src]="cuba.imageUrl_0"
+                      width="500"
+                      height="500"
+                      layout="responsive"
+                      on="tap:gallery-lightbox"
+                      role="button"
+                      tabindex="0">
+                    </amp-img>
+
+                  </div>
+
+               </amp-carousel>
+
+        <amp-install-serviceworker
+          src="/sw.js"
+          data-iframe-src="https://amp_install_serviceworker.html"
+          layout="nodisplay">
+        </amp-install-serviceworker>
+
+      </div>
+    </div>
   </body>
 </html>
-
+            
