--- a/experiment.html
+++ b/experiment.html
@@ -14,7 +14,58 @@
     <script async custom-element="amp-social-share" src="https://cdn.ampproject.org/v0/amp-social-share-0.1.js"></script>
     <script async custom-element="amp-base-carousel" src="https://cdn.ampproject.org/v0/amp-base-carousel-0.1.js"></script>
     <script async custom-element="amp-carousel" src="https://cdn.ampproject.org/v0/amp-carousel-0.2.js"></script>
-    <script async custom-element="amp-install-serviceworker" src="https://cdn.ampproject.org/v0/amp-install-serviceworker-0.1.js"></script>
+   <script async custom-element="amp-install-serviceworker" src="https://cdn.ampproject.org/v0/amp-install-serviceworker-0.1.js"></script>
+
+ <style amp-custom>
+
+ <style amp-custom>
+   /*
+   * Fidget Spinner styles
+   */
+  .fidget-spinner-scene {
+    margin: 10px 20%;
+  }
+
+  /*
+   * Card transition styles
+   */
+  .card {
+    margin: 10%;
+    position: relative;
+  }
+  .card-title {
+    padding: 5%;
+    padding-right: 40%;
+    font-size: 50%;
+    font-weight: bold;
+    color: #FAFAFA;
+    transform: translateX(-100%);
+  }
+
+  /*
+   * Parallax window styles
+   */
+  .parallax-image-window {
+    overflow: hidden;
+  }
+  .parallax-image-window amp-img {
+    margin-bottom: -30%;
+  }
+
+  /*
+   * Carousel transition styles
+   */
+  .carousel-component {
+    margin-right: -60%;
+    margin-left: 60%;
+  }
+  .carousel-parent {
+    overflow: hidden;
+  }
+
+    </style>
+  </head>
+
 
 
     <script async src="https://cdn.ampproject.org/v0.js"></script>
