--- a/uno.html
+++ b/uno.html
@@ -1216,6 +1216,42 @@
       </template>
      </section>
 
+
+
+  <script id="local-storage-script" type="text/plain" target="amp-script">
+  const submit = document.getElementById('username-submit');
+  const input = document.getElementById('username-input');
+  const display = document.getElementById('username-display');
+
+  const oldUsername = localStorage.getItem('username');
+  display.textContent = oldUsername ? oldUsername : '(not set)';
+
+  function setUsername() {
+    const newUsername = input.value;
+    localStorage.setItem('username', newUsername);
+    display.textContent = newUsername;
+  }
+
+  submit.addEventListener('click', setUsername);
+</script>
+
+
+
+
+    <amp-script layout="fixed-height" script="local-storage-script" height="110" class="sample">
+  <div>
+    <span>Current username: </span>
+    <b id="username-display"></b>
+  </div>
+  <div>
+    <label>Enter new username:</label>
+    <input id="username-input" type="text" maxlength="20">
+  </div>
+  <button id="username-submit">Submit</button>
+</amp-script>
+
+
+
          <amp-carousel id="cielo-carousel"
                   width="500"
                   height="500"
