Usando amp-script

--- a/uno.html
+++ b/uno.html
@@ -21,8 +21,7 @@
     <meta content='https://santa.capital/' property='og:url'>
     <meta content='WHAPPY Store' property='og:site_name'>
 
-
-
+    <meta name="amp-script-src"  content="sha384-YCFs8k-ouELcBTgzKzNAujZFxygwiqimSqKK7JqeKaGNflwDxaC3g2toj7s_kxWG" />
 
     <script id="inicial" type='application/ld+json'>
     { 
