--- a/uno.html
+++ b/uno.html
@@ -21,7 +21,7 @@
     <meta content='https://santa.capital/' property='og:url'>
     <meta content='WHAPPY Store' property='og:site_name'>
 
-    <meta name="amp-script-src"  content="sha384-YCFs8k-ouELcBTgzKzNAujZFxygwiqimSqKK7JqeKaGNflwDxaC3g2toj7s_kxWG" />
+    <meta name="amp-script-src" content="sha384-PL0iazy-mDITGBzff2lQM53EM_Y6_Z9ec8QQr_Sag63n9phtd_V_ies_KL7O73wy">
 
   <script id="local-storage-script" type="text/plain" target="amp-script">
   const submit = document.getElementById('username-submit');
