Evitando el hash de amp-scrit al colocar el atributo "data-ampdevmode"

--- a/uno.html
+++ b/uno.html
@@ -24,7 +24,7 @@
     <meta name="amp-script-src" content="sha384-PL0iazy-mDITGBzff2lQM53EM_Y6_Z9ec8QQr_Sag63n9phtd_V_ies_KL7O73wy">
 
 
-    <script id="local-storage-script" type="text/plain" target="amp-script">
+    <script id="local-storage-script" type="text/plain"  "data-ampdevmode"=true   target="amp-script">
 
       const submit = document.getElementById('username-submit');
       const input = document.getElementById('username-input');
@@ -44,7 +44,7 @@
 
 
 
-    <script id="nombre-storage-script" type="text/plain" target="amp-script">
+    <script id="nombre-storage-script" type="text/plain" "data-ampdevmode"= true target="amp-script">
 
       const submit  = document.getElementById('nombre-submit');
       const input   = document.getElementById('nombre-input');
